k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trackit
  labels:
    app: trackit
    environment: production
